--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,16 @@
 {
     "name": "malotor/ecommerce",
-    "description": "A example of a ecommerce shop",
+    "description": "A Ecommerce Business Login",
+    "authors": [
+      {
+        "name": "Manel López Torrent",
+        "email": "malotor@gmail.com"
+      }
+    ],
+    "minimum-stability": "dev",
+    "require": {
+      "php": ">=5.3.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "4.0.*"
     },
