Added versión to composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "malotor/ecommerce",
+    "version" : "0.0.1-dev",
     "description": "A Ecommerce Business Login",
     "authors": [
       {
