--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "malotor/ecommerce",
-    "version" : "0.0.1-dev",
+    "version" : "0.0.1",
     "description": "A Ecommerce Business Login",
     "authors": [
       {
@@ -8,7 +8,7 @@
         "email": "malotor@gmail.com"
       }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
       "php": ">=5.3.0"
     },
